--- a/themes/cbr-theme/blog.css
+++ b/themes/cbr-theme/blog.css
@@ -40,21 +40,41 @@ h6,
  */
 
 .blog-masthead {
-  background-color: white;
+  background-color: #428bca;
+  -webkit-box-shadow: inset 0 -2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 -2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Nav links */
 .blog-nav-item {
   position: relative;
   display: inline-block;
+  padding: 10px;
   font-weight: 500;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
+  color: #cdddeb;
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
   color: #fff;
   text-decoration: none;
+}
+
+/* Active state gets a caret at the bottom */
+.blog-nav .active {
+  color: #fff;
+}
+.blog-nav .active:after {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -5px;
+  vertical-align: middle;
+  content: " ";
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid;
+  border-left: 5px solid transparent;
 }
 
 /*
@@ -144,24 +164,6 @@ h6,
   margin-bottom: 0;
 }
 
-.blog-nav li {
-  position: relative;
-  display: inline-block;
-  padding-bottom: 1em;
-  padding-left: 1em;
-  font-weight: 500;
-  font-size: 1.25em;
-  font-family: Arial, Helvetica, sans-serif;
-}
-.blog-nav li a {
-  color: black;
-}
-
-.blog-nav {
-  display: flex;
-  flex-direction: row;
-}
-
-.other-links {
-  padding-top: 4em;
+.navbar {
+  margin-top: 2em;
 }
