--- a/themes/cbr-theme/blog.css
+++ b/themes/cbr-theme/blog.css
@@ -26,16 +26,6 @@ h6,
 }
 
 /*
- * Override Bootstrap's default container.
- */
-
-@media (min-width: 1200px) {
-  .container {
-    width: 970px;
-  }
-}
-
-/*
  * Masthead for nav
  */
 
@@ -164,6 +154,6 @@ h6,
   margin-bottom: 0;
 }
 
-.navbar {
-  margin-top: 2em;
+.nav-link {
+  font-size: 2em;
 }
