--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -1,22 +1,46 @@
 div.container {
-  margin-left: 0;
+  margin-left: 1em;
   padding-left: 0;
 }
 
 .navbar {
-  margin-top: 1em;
   padding-left: 0;
   background-color: white;
-}
-
-.collapse {
-  padding-top: 2em;
+  padding-right: 0;
+  padding-top: 0;
 }
 
 .bg-light {
   background-color: white;
 }
-
 .nav-link {
   font-size: 1em;
+}
+
+@media (min-width: 768px) {
+  .nav-link {
+    padding-top: 2em;
+    font-size: 1.1em;
+  }
+  div.container {
+    margin-left: 0;
+  }
+  .navbar-brand {
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 992px) {
+  .nav-link {
+    padding-top: 1.1em;
+    font-size: 0.9em;
+  }
+  .navbar-brand {
+    padding-top: 0;
+    margin-right: 0;
+  }
+}
+
+.navbar-collapse.in {
+  display: block !important;
 }
