--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -95,6 +95,7 @@ ul#horizontal-list li {
   padding-left: 0;
   margin-left: 5em;
   margin-right: 5em;
+  margin-top: 2em;
 }
 
 a[rel="tag"] {
@@ -104,7 +105,7 @@ a[rel="tag"] {
 @media (max-width: 992px) {
   .nav-link {
     padding-top: 1.1em;
-    font-size: 0.9em;
+    font-size: 1em;
   }
   .navbar-brand {
     padding-top: 0;
