--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -7,25 +7,25 @@ div.container {
 }
 
 .menu {
-	box-shadow: 0px 5px 5px #cccccc;
+  box-shadow: 0px 5px 5px #cccccc;
 }
 
 /*
  * Subscribe button
  */
 .subscribe {
-	font-size: 1em;
-	display: block;
-	padding-left: 8px;
-	padding-right: 8px;
-	padding-bottom: 16px;
-	padding-top: 16px;
-	color: rgba(0,0,0,.5);
+  font-size: 1em;
+  display: block;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 16px;
+  padding-top: 16px;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .subscribe:hover {
-	color: #810E0F;
-	text-decoration: none;
+  color: #810e0f;
+  text-decoration: none;
 }
 
 .navbar {
@@ -49,23 +49,24 @@ div.container {
 }
 
 .navbar-brand {
-	width: 100px;
-	height: 100px;
-	padding: 0;
-	margin: 0;
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  margin: 0;
 }
 
 .nav-logo {
-	padding-right: 0.5em;
-	margin: 0;
+  padding-right: 0.5em;
+  margin: 0;
 }
 
-.navbar>.container, .navbar>.container-fluid {
-	align-items: flex-end;
+.navbar > .container,
+.navbar > .container-fluid {
+  align-items: flex-end;
 }
 
 @media (min-width: 768px) {
-/*   .nav-link {
+  /*   .nav-link {
     padding-top: 2em;
     font-size: 1.0em;
   }
@@ -79,7 +80,7 @@ div.container {
 
 @media (max-width: 992px) {
   .nav-link {
-/*     padding-top: 1.1em;
+    /*     padding-top: 1.1em;
     font-size: 0.9em; */
   }
   .navbar-brand {
@@ -108,26 +109,26 @@ div.container {
   }
 }
 
-
 /* Condensed menu */
 @media (max-width: 767.98px) {
-	.navbar>.container, .navbar>.container-fluid {
-		align-items: center;
-	}
-	.navbar-brand {
-		margin: 0;
-	}
-	.nav-logo {
-		padding: 0;
-		flex-grow: 1;
-		text-align: right;
-	}
-	.subscribe {
-	    display: none !important;
-	}
-	#footer-container {
-		text-align: center !important;
-	}
+  .navbar > .container,
+  .navbar > .container-fluid {
+    align-items: center;
+  }
+  .navbar-brand {
+    margin: 0;
+  }
+  .nav-logo {
+    padding: 0;
+    flex-grow: 1;
+    text-align: right;
+  }
+  .subscribe {
+    display: none !important;
+  }
+  #footer-container {
+    text-align: center !important;
+  }
 }
 
 a {
@@ -171,7 +172,7 @@ a {
 }
 
 #feature-image {
-  width: 100vw;
+  width: 80vw;
   height: auto;
 }
 
@@ -202,37 +203,15 @@ ul#horizontal-list li {
 a[rel="tag"] {
   color: rgb(123, 22, 29);
 }
-<<<<<<< HEAD
 
-@media (max-width: 992px) {
-  .nav-link {
-    padding-top: 1.1em;
-    font-size: 1em;
-  }
-  .navbar-brand {
-    padding-top: 0;
-    margin-right: 0;
-  }
-  #footer-container {
-    text-align: center !important;
-    padding-right: 0;
-  }
-  .blog-post > h2 {
-    margin-left: 0.75em;
-    margin-right: 2em;
-    font-size: 1.5em;
-    font-weight: 300;
-    margin-top: 1em;
-  }
-  .blog-post > p {
-    margin-left: 1em;
-    margin-right: 1em;
-  }
-  #horizontal-list {
-    padding-left: 0;
-    margin-left: 1em;
-    margin-right: 1em;
-  }
+.author-profile-card {
+  background: #eee;
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-bottom: 20px;
 }
-=======
->>>>>>> cfd6be2bb8696bad21abe5461b0a792250f2e8f0
+.author-photo {
+  float: left;
+  text-align: left;
+  padding: 5px;
+}
