--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -30,6 +30,7 @@ div.container {
   padding-right: 8px;
   padding-bottom: 16px;
   padding-top: 16px;
+  margin-right: 0.5em;
   color: rgba(0, 0, 0, 0.5);
 }
 
