more changes author page

--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -127,6 +127,10 @@ div.container {
   #mc_embed_signup input.email {
     width: 75%;
   }
+
+  .navbar-toggler {
+    margin-left: 1em;
+  }
 }
 
 a {
