--- a/themes/cbr-theme/after.css
+++ b/themes/cbr-theme/after.css
@@ -17,7 +17,7 @@ div.container {
 }
 
 .menu {
-  box-shadow: 0px 5px 5px #cccccc;
+  box-shadow: 0px 3px 3px #eeeeee;
 }
 
 /*
@@ -55,8 +55,8 @@ div.container {
   font-size: 1em;
   text-transform: uppercase;
   padding: 1em;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
+  margin-left: 0.3em;
+  margin-right: 0.3em;
 }
 
 .navbar-brand {
@@ -81,28 +81,26 @@ div.container {
   height: auto;
 }
 
-@media (min-width: 768px) {
-  /*   .nav-link {
-    padding-top: 2em;
-    font-size: 1.0em;
-  }
-  div.container {
-    margin-left: 0;
-  }
-  .navbar-brand {
-    padding-top: 0;
-  } */
-}
-
 /* Condensed menu */
 @media (max-width: 767.98px) {
   .navbar > .container,
   .navbar > .container-fluid {
     align-items: center;
   }
+	
+  .navbar-nav .nav-link {
+	padding-left: 1em;
+  }
+	
+  .navbar-light .navbar-toggler{
+	border-color: rgba(0,0,0,0);
+	padding-left: 1em;
+  }
+	
   .navbar-brand {
     margin: 0;
   }
+	
   .nav-logo {
     padding: 0;
     flex-grow: 1;
@@ -111,6 +109,7 @@ div.container {
   .subscribe {
     display: none !important;
   }
+	
   #footer-container {
     text-align: center !important;
   }
@@ -216,10 +215,6 @@ a[rel="tag"] {
 }
 
 @media (max-width: 992px) {
-  .nav-link {
-    /*     padding-top: 1.1em;
-    font-size: 0.9em; */
-  }
   .navbar-brand {
     padding-top: 0;
     margin-right: 0;
@@ -250,6 +245,7 @@ a[rel="tag"] {
     width: 100vw;
     height: auto;
   }
+
 }
 
 @media (min-width: 1200px) {
