--- a/themes/cbr-theme/author.css
+++ b/themes/cbr-theme/author.css
@@ -1,3 +1,15 @@
+.author-page {
+  margin-left: 6em;
+  margin-right: 6em;
+}
+
+@media (max-width: 1200px) {
+	.author-page {
+	  margin-left: 2em;
+	  margin-right: 2em;
+	}
+}
+
 @font-face {
   font-family: Din;
   src: url(D-DIN.otf);
@@ -13,14 +25,16 @@
 
 #author-descrip {
   margin-top: 2.5em;
-  margin-right: 3.5em;
+  margin-right: auto;
 }
 
 .img-responsive {
   display: block;
   margin-left: auto;
-  margin-right: auto;
-  margin-top: 3.5em;
+  margin-right: 1.5em;
+  padding: 1.5em;
+  margin-top: 2em;
+  float: left;
 }
 
 #featured {
@@ -28,11 +42,11 @@
   color: rgb(123, 22, 29);
   font-family: Din;
   font-size: 3em;
-  margin-left: 2em;
   font-weight: 300;
 }
 
 .mini {
+  margin-top: 4em;
   display: block;
 }
 
