--- a/themes/cbr-theme/author.css
+++ b/themes/cbr-theme/author.css
@@ -5,7 +5,7 @@
 
 .bg-color {
 	width: 100%;
-	height: 22%;
+	height: 115px;
 	background-color: #F3DC9F;
 }
 
@@ -45,15 +45,31 @@
   font-weight: 300;
 }
 
+#feature-img img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+#article-img img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
 .mini {
-  margin-top: 4em;
+  display: block;
+}
+
+.feature {
   display: block;
 }
 
 .title {
   font-family: Din;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 300;
+  padding-top: 1rem;
 }
 
 .excerpt > p {
@@ -62,7 +78,7 @@
 
 @media (max-width: 1200px) {
 	.bg-color {
-		height: 18%;
+		height: 90px;
 	}
 	
 	.author-page {
@@ -91,7 +107,7 @@
 
 	.title {
 	  font-family: Din;
-	  font-size: 2em;
+	  font-size: 2em;
 	  font-weight: 300;
 	}
 
